# Vacancy_from_HH_10_companies

./: .coverage  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_config_py.html  z_a44f0ac069e85531_test_database_py.html  z_a44f0ac069e85531_test_db_manager_py.html  z_a44f0ac069e85531_test_main_py.html
src/: config.py  database.py  db_manager.py  main.py
tests/: conftest.py  test_config.py  test_database.py  test_db_manager.py  test_main.py
