[project]
name = "vacancy-from-hh-10-companies"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Pogoreltcev",email = "romzes26@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
